[gd_scene load_steps=3 format=3 uid="uid://ctliqa78e0cve"]

[ext_resource type="Script" path="res://Main/GUI/Settings/MainSettings/MainSettings.gd" id="1_w0ocd"]

[sub_resource type="LabelSettings" id="LabelSettings_njtfi"]
font_size = 30

[node name="MainSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w0ocd")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -125.0
offset_right = 95.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_njtfi")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Base" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Base"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -72.0
offset_right = 56.5
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer/Base/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Settings" type="Button" parent="PanelContainer/VBoxContainer/Base/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="DangerSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/Base/VBoxContainer"]
layout_mode = 2

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer/Base/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="QuitToMenu" type="Button" parent="PanelContainer/VBoxContainer/Base/VBoxContainer"]
layout_mode = 2
text = "Quit To Menu"

[node name="SettingsSelector" type="Control" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/SettingsSelector"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -72.0
offset_right = 56.5
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2

[node name="General" type="Button" parent="PanelContainer/VBoxContainer/SettingsSelector/VBoxContainer"]
layout_mode = 2
text = "General
"

[node name="Keybinds" type="Button" parent="PanelContainer/VBoxContainer/SettingsSelector/VBoxContainer"]
layout_mode = 2
text = "Keybinds"

[node name="Back" type="Button" parent="PanelContainer/VBoxContainer/SettingsSelector/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Base/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Base/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Base/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Base/VBoxContainer/QuitToMenu" to="." method="_on_quit_to_menu_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/SettingsSelector/VBoxContainer/General" to="." method="_on_general_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/SettingsSelector/VBoxContainer/Keybinds" to="." method="_on_keybinds_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/SettingsSelector/VBoxContainer/Back" to="." method="_on_SecondSettingsback_pressed"]
